--- a/librenms/map.jinja
+++ b/librenms/map.jinja
@@ -24,6 +24,19 @@
             ],
             'webserver_group': 'apache',
         },
+        'FreeBSD': {
+            'pkgs': [
+                'fping',
+                'git',
+                'graphviz',
+                'ImageMagick-nox11',
+                'mtr-nox11',
+                'nmap',
+                'rrdtool',
+                'whois',
+            ],
+            'webserver_group': 'www',
+        },
     }),
     'general': {
         'user': 'librenms',
