Add webserver user to librenms group

--- a/librenms/map.jinja
+++ b/librenms/map.jinja
@@ -13,6 +13,7 @@
                 'snmp',
                 'whois',
             ],
+            'webserver_user': 'www-data',
             'webserver_group': 'www-data',
         },
         'RedHat': {
@@ -29,6 +30,7 @@
                 'MySQL-python',
                 'cronie'
             ],
+            'webserver_user': 'apache',
             'webserver_group': 'apache',
         },
         'FreeBSD': {
@@ -42,6 +44,7 @@
                 'rrdtool',
                 'whois',
             ],
+            'webserver_user': 'www',
             'webserver_group': 'www',
         },
     }),
