FreeBSD: use py27-MySQLdb

--- a/librenms/map.jinja
+++ b/librenms/map.jinja
@@ -43,6 +43,7 @@
                 'ImageMagick-nox11',
                 'mtr-nox11',
                 'nmap',
+                'py27-MySQLdb',
                 'rrdtool',
                 'whois',
             ],
